                               * new confinement of the velocity ( V[t+1] = -0.5 * V[t], when x[t+1] > x_max | x[t+1] < x_min )
                               * optional normalisation of parameter values
        
                            -) improved performance: ~ 33% faster for 32-bit machines and 38% faster for 64-bit machines.
                               Tested on 10-, 20- and 30-D benchmark functions with 'write2disk=FALSE'.
                            -) 'fn' argument now can be any R function or a character. In the latter case, it can be "hydromod" or the name of a 
                               valid R function. In previous versions of 'hydroPSO' only a character type was accepted.
                            -) now it handles models with sub-daily time step and with sub-daily observations (thanks to O. Rakovec !).
                               Suggested dependence on hydroGOF >= 0.3-5 and hydroTSM >= 0.3-6
                            -) new output file 'BestModel_out.txt', with the model outputs corresponding to the best parameter set. 
                               Only available when 'fn.name=="hydromod"'
                            -) new 'normalise' parameter for the 'control' variable, in order to improve the performance when the search space is not 
                               a hypercube
                            -) argument 'method' now allows the following 3 new values: 'spso2007', 'spso2011' and 'canonical', which set the values of the PSO 
                               engine to the ones of the SPSO 2007, SPSO 2011 and the canonical one, respectively. 
                            -) argument 'method'. The old (default) value 'pso' was replaced by the new (default) value 'spso2011'
                            -) argument 'Vini.type' now allows 2 new values for setting the initial velocity of the particles according to the equation 